Changes in Version 1.1.0 - SEM functionality:
  o NEEDED

Changes in Version 1.1.0
  o added 'residuals' argument to qgraph(). If TRUE, selfloops are plotted as residuals with no origin.
  o Fixed issues with margins when plot=FALSE
  o Fixed dimensionality issues of arrowheads.
  o Improved default arguments for 'esize'. Now sets to 2 if the graph is unweighted and halfs the default value if graph is directed.
  o Method for moving beginning and end of edge to the edge of nodes has been reworked through the internal function Cent2Edge(). This should now be much more stable, and no longer be bugged if a graph is plotted with margins.
  o Fixed outdated information in the qgraph help page on specification of layout argument.
  o Selfloops have been reworked through the internal function SelfLoop(). Can now be rotated using the loopRotation argument. The loop argument for controlling the size is currently defunct.
  o qgraph.gui() included which enables a gui for analyzing correlation matrices

Changes in Version 1.0.5-2
  o Removed tikzdevice option due to removal from CRAN. Please see www.sachaepskamp.com/qgraph for details.

Changes in Version 1.0.5
  o Fixed a compatibility issue with the most recent version of Lavaan (0.4-14)

Changes in Version 1.0.4
  o Added reference to JSS paper.
  o The name of the author in several function Rd pages has been changed to reflect my new e-mail address.

Changes in Version 1.0.3
  o Added the 'aspect' argument to qgraph. Set this to TRUE to keep the aspect ratio of the original layout (e.g. result from layout="spring").
  o Fixed a bug where an unweighted graph object would be plotted as a weighted graph in consecutive calls.
  o Fixed issues with the "centrality" function in combination with bidirectional edges.

Changes in Version 1.0.2
  o Fixed a bug in with using a tuning parameter of 0 in centrality()
  o Fixed a bug with the arrows not being plotted properly when using a layout and non-square plotting area